--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ social:
   email: jorge.blanco@berkeley.edu # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    https://www.linkedin.com/in/jorge-blanco-herrera/ # change to your twitter homepage
-    https://www.linkedin.com/in/jorge-blanco-herrera/  # change to your github homepage
+    - https://twitter.com/username # change to your Twitter homepage
+    - https://github.com/username # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
